Fix build error on case-sensitive systems
RepetierHost.csproj includes ColorSlider.designer.cs but the actual file
is called ColorSlider.Designer.cs with capital 'D'. That small
difference breaks the build on systems where the filesystem is
case-sensitive:

  error CS2001: Source file `view/utils/ColorSlider.designer.cs' could not be found

TIP: Mono can be told to ignore case-sensitivity like this:
  MONO_IOMAP=all xbuild ...
See http://mono-project.com/IOMap for more info.

--- a/src/RepetierHost/RepetierHost.csproj
+++ b/src/RepetierHost/RepetierHost.csproj
@@ -480,7 +480,7 @@
     <Compile Include="view\utils\ColorSlider.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="view\utils\ColorSlider.designer.cs">
+    <Compile Include="view\utils\ColorSlider.Designer.cs">
       <DependentUpon>ColorSlider.cs</DependentUpon>
     </Compile>
     <Compile Include="view\utils\CommandExecutioner.cs" />
